The code now uses the contiki lists and dynamic memory allocations.

--- a/coap-uart-device-handler/Makefile
+++ b/coap-uart-device-handler/Makefile
@@ -1,5 +1,5 @@
 CONTIKI_PROJECT = er-uart-server
-PROJECT_SOURCEFILES += proto1.c 
+PROJECT_SOURCEFILES += coap_proxy.c 
 
 all: $(CONTIKI_PROJECT)
 
