The proxy is able to publish its sensors to the coap engine. The uart handling needs to be tweaked. This work will be the next to work on.

--- a/coap-uart-device-handler/Makefile
+++ b/coap-uart-device-handler/Makefile
@@ -1,5 +1,5 @@
 CONTIKI_PROJECT = er-uart-server
-PROJECT_SOURCEFILES += coap_proxy.c 
+PROJECT_SOURCEFILES += coap_proxy.c uarthandler.c
 
 all: $(CONTIKI_PROJECT)
 
