Various fixes for the node
The code is mainly from the openmote project - this meant that some
sensors were unknown to us and have been removed.
The pulsesensor has been introduced, and tested with our new relayboard.
It works ok.
The sensors are now all instantiated based on the original contiki
sensor design, but with some extras config struct added.

--- a/sensorsUnleashed/Makefile
+++ b/sensorsUnleashed/Makefile
@@ -1,9 +1,10 @@
 CONTIKI_PROJECT = er-uart-server
-PROJECT_SOURCEFILES += pairing.c 
+PROJECT_SOURCEFILES += pairing.c pulsesensor.c relay.c
 
 all: $(CONTIKI_PROJECT)
 
 TARGETDIRS += ../targets
+
 APPDIRS += ../apps
 
 CONTIKI=../contiki
@@ -36,7 +37,7 @@ REST_RESOURCES_FILES = $(notdir $(shell find $(REST_RESOURCES_DIR) -name '*.c' !
 endif
 endif
 
-PROJECTDIRS += $(REST_RESOURCES_DIR)
+PROJECTDIRS += $(REST_RESOURCES_DIR) ./dev
 PROJECT_SOURCEFILES += $(REST_RESOURCES_FILES)
 
 # linker optimizations
