--- a/targets/su-cc2538-1/Makefile.su-cc2538-1
+++ b/targets/su-cc2538-1/Makefile.su-cc2538-1
@@ -11,7 +11,7 @@ PLATFORM_ROOT_DIR = $(CONTIKI)/platform/$(TARGET)
 ### Include
 CONTIKI_TARGET_SOURCEFILES += contiki-main.c board.c
 CONTIKI_TARGET_SOURCEFILES += leds-arch.c button-sensor.c openmote-sensors.c
-CONTIKI_TARGET_SOURCEFILES += antenna.c adxl346.c max44009.c sht21.c tps62730.c
+CONTIKI_TARGET_SOURCEFILES += antenna.c
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
