Platform, Pulse, mainsdetect and relay updated and about ready for show off

--- a/targets/su-cc2538-1/Makefile.su-cc2538-1
+++ b/targets/su-cc2538-1/Makefile.su-cc2538-1
@@ -13,6 +13,8 @@ CONTIKI_TARGET_SOURCEFILES += contiki-main.c board.c
 CONTIKI_TARGET_SOURCEFILES += leds-arch.c button-sensor.c
 CONTIKI_TARGET_SOURCEFILES += antenna.c
 
+##TARGET_START_SOURCEFILES = su-startup-gcc.c
+
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
 CLEAN += *.su-cc2538-1
